--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Nerds-main</title>
 </head>
 
@@ -12,10 +17,10 @@
     <header class="header-main">
         <div class="header-main__wrapper">
             <a class="header-main__logo-link" href="#"><img class="header-main__logo-image" src="./image/nerds-logo.png"
-                    alt="logotype" width="160px" height="65px"></a>
+                    alt="logotype" width="159.87px" height="65.02px"></a>
             <nav class="header-main__navigation">
                 <ul class="header-main__navigation-list">
-                    <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
+                    <li class="header-main__navigation-list-item page-located"><a class="header-main__navigation-link"
                             href="#">Студия</a></li>
                     <li class="header-main__navigation-list-item"><a class="header-main__navigation-link"
                             href="#">Клиенты</a></li>
@@ -25,20 +30,23 @@
                             href="#">Контакты</a></li>
                 </ul>
             </nav>
-            <a class="header-main__navigation-cart-link" href="#"><img class="header-main__navigation-cart-image"
-                    src="/image/cart-icon.svg" alt="Логотип корзины." width="15px" height="15px"></a>
             <a class="header-main__navigation-cart" href="#">Корзина</a>
         </div>
     </header>
     <section class="intro">
-        <div class="intro-slider">
+        <div class="intro-swipe">
+            <button class="intro-swipe__button" type="button"></button>
+            <button class="intro-swipe__button" type="button"></button>
+            <button class="intro-swipe__button" type="button"></button>
+        </div>
+        <div class="intro-slider active-slider">
             <h2 class="intro-slider__title">Долго, дорого, скрупулезно.</h2>
-            <p class="intro-slider__description">Математически выверенный дизайн для вашего сайта или мобильного
+            <p class="intro-slider__description">Математически выверенный дизайн <br>для вашего сайта или мобильного
                 приложения.
             </p>
             <a class="intro-slider__button" href="#">Узнать больше</a>
-            <img class="intro-slider__image" src="./image/placeholder.svg" alt="Три одинаковых телефона." width="760px"
-                height="431px">
+            <img class="intro-slider__image" src="./image/nerds-index-slide1.png" alt="Три одинаковых телефона."
+                width="760px" height="431px">
         </div>
         <div class="intro-slider">
             <h2 class="intro-slider__title">Любим математику как никто другой</h2>
@@ -46,7 +54,7 @@
                 пропорций
             </p>
             <a class="intro-slider__button" href="#">Узнать больше</a>
-            <img class="intro-slider__image" src="./image/placeholder.svg" alt="Два монитора." width="760px"
+            <img class="intro-slider__image" src="./image/nerds-index-slide2.png" alt="Два монитора." width="760px"
                 height="431px">
         </div>
         <div class="intro-slider">
@@ -54,9 +62,10 @@
             <p class="intro-slider__description">Работать днем, как все? Мы против этого.Ближе к полуночи работа только
                 начинается.</p>
             <a class="intro-slider__button" href="#">Узнать больше</a>
-            <img class="intro-slider__image" src="./image/placeholder.svg" alt="Телефон и планшет." width="760px"
+            <img class="intro-slider__image" src="./image/nerds-index-slide3.png" alt="Телефон и планшет." width="760px"
                 height="431px">
         </div>
+
     </section>
     <section class=" promotion">
         <ul class="promotion__list">
